--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
         }
 
         .levels {
-            display: flex;
-            flex-wrap: wrap; /* Permite que os botões quebrem linha */
-            justify-content: center; /* Centraliza os botões */
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
             padding: 20px;
+            max-width: 500px;
+            margin: 0 auto;
+            justify-content: center;
         }
 
         .level-button {
@@ -52,11 +54,8 @@
         .levelC { background-image: url('imagens/levelC.png'); }
         .levelD { background-image: url('imagens/levelD.png'); }
 
-        /* Estilo da caixa de login */
+        /* Estilo do botão de login e dropdown */
         .login-container {
-            display: flex;
-            align-items: center; /* Alinha verticalmente */
-            gap: 10px; /* Espaço entre avatar e nome */
             position: absolute;
             top: 20px;
             right: 60px;
@@ -65,19 +64,25 @@
             padding: 10px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
+        }
+
+        .login-button {
+            text-decoration: none;
+            font-size: 18px;
+            color: #333;
         }
 
         .user-icon {
             width: 40px;
             height: 40px;
-            border-radius: 50%;
+            cursor: pointer;
         }
 
         .user-name {
             font-size: 14px;
             color: #333;
-            margin: 0;
+            margin-top: 5px;
+            text-align: center;
         }
 
         .dropdown {
@@ -104,6 +109,48 @@
         .dropdown a:hover {
             background-color: #f2f2f2;
         }
+
+        /* Botão de instalação do PWA */
+        #install-button {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        /* Contêiner da imagem do convite */
+        .invitation-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        /* Estilo da imagem do convite como botão */
+        .invitation-button {
+            width: 250px; /* Ajuste o tamanho conforme necessário */
+            height: auto;
+            cursor: pointer;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+        }
+
+        .invitation-button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Esconder o botão convite por padrão */
+        .invitation-container {
+            display: none;
+        }
     </style>
 </head>
 
@@ -111,9 +158,11 @@
     <div class="container">
         <header>
             <!-- Contêiner para login ou ícone de usuário -->
-            <div class="login-container" id="loginContainer">
+            <div class="login-container">
                 <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
-                <div class="dropdown" id="userDropdown"></div>
+                <div class="dropdown" id="userDropdown">
+                    <a href="#" id="logout">LEAVE</a>
+                </div>
             </div>
 
             <div class="logo-title">
@@ -136,7 +185,10 @@
         </main>
     </div>
 
-    <!-- Firebase Auth Script -->
+    <!-- Botão de instalação do PWA -->
+    <button id="install-button">Instalar Aplicativo</button>
+
+    <!-- Configuração do Firebase -->
     <script>
         var firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
@@ -152,118 +204,151 @@
         // Inicializando Firebase
         firebase.initializeApp(firebaseConfig);
 
-        // Função para exibir o usuário logado e ajustar níveis
-        firebase.auth().onAuthStateChanged(function(user) {
-            const loginLink = document.getElementById("loginLink");
-            const userDropdown = document.getElementById("userDropdown");
-            const invitationContainer = document.getElementById("invitationContainer");
-
-            if (user) {
-                const userRef = firebase.database().ref('usuarios/' + user.uid);
-                userRef.once('value').then((snapshot) => {
-                    const userData = snapshot.val();
-                    const userName = userData.nome || user.email;
-                    const userAvatar = userData.avatar ? `imagens/${userData.avatar}` : 'imagens/bonecologin1.png';
-
-                    // Atualiza a interface do usuário
-                    loginLink.innerHTML = `<img src="${userAvatar}" alt="User Icon" class="user-icon"><p class="user-name">${userName}</p>`;
-                    invitationContainer.style.display = "none";
-
-                    // Define o dashboard conforme o tipo de usuário
-                    let dashboardLink = '';
-                    if (userData.role === 'proprietario') {
-                        dashboardLink = '<a href="painel_proprietario.html">OWNER DASHBOARD</a>';
-                    } else if (userData.role === 'professor') {
-                        dashboardLink = '<a href="painel_professor.html">TEACHER DASHBOARD</a>';
-                    } else {
-                        dashboardLink = '<a href="painel_aluno.html">STUDENT DASHBOARD</a>';
-                    }
-
-                    // Atualiza o dropdown com o link do dashboard e botão de logout
-                    userDropdown.innerHTML = `
-                        ${dashboardLink}
-                        <a href="#" id="logout">LEAVE</a>
-                    `;
-
-                    // Ajusta o desbloqueio dos níveis
-                    if (userData.progresso) {
-                        liberarNiveis(Object.keys(userData.progresso));
-                    } else {
-                        liberarNiveis(['Level1']);
-                    }
-                });
-            } else {
-                loginLink.innerHTML = "Login";
-                bloquearTodosNiveis();
-                invitationContainer.style.display = "flex";
-            }
-        });
-
-        // Funções de bloqueio e desbloqueio de níveis
+        // Função para bloquear todos os níveis
         function bloquearTodosNiveis() {
-            document.querySelectorAll('.level-button').forEach(button => {
+            document.querySelectorAll('.level-button').forEach((button) => {
                 button.style.filter = 'grayscale(100%)';
                 button.style.pointerEvents = 'none';
+                button.onclick = null;
             });
         }
 
+        // Função para liberar níveis específicos
         function liberarNiveis(niveis) {
-            document.querySelectorAll('.level-button').forEach(button => {
+            document.querySelectorAll('.level-button').forEach((button) => {
                 const level = button.id;
                 if (niveis.includes(level)) {
+                    button.classList.add('liberado');
                     button.style.filter = 'none';
                     button.style.pointerEvents = 'auto';
+                    button.onclick = () => {
+                        const levelIndex = level.replace('Level', '');
+                        window.location.href = nivel${String.fromCharCode(64 + parseInt(levelIndex))}/index.html;
+                    };
                 } else {
+                    button.classList.remove('liberado');
                     button.style.filter = 'grayscale(100%)';
                     button.style.pointerEvents = 'none';
+                    button.onclick = null;
                 }
             });
         }
 
-        <!-- Continuando o JavaScript -->
-
-        // Alternar dropdown ao clicar
-        document.getElementById("loginContainer").addEventListener("click", function(event) {
-            event.preventDefault();
+        // Verificando autenticação
+        firebase.auth().onAuthStateChanged(function (user) {
+            const loginLink = document.getElementById("loginLink");
             const dropdown = document.getElementById("userDropdown");
-            dropdown.style.display = (dropdown.style.display === 'none' || dropdown.style.display === '') ? 'block' : 'none';
-        });
+            const invitationContainer = document.getElementById("invitationContainer");
+            
+            if (user) {
+                console.log("Usuário logado:", user.uid);
+                invitationContainer.style.display = "none"; // Oculta a imagem convite quando logado
 
-        // Fecha o dropdown ao clicar fora dele
-        window.addEventListener("click", function(event) {
-            const dropdown = document.getElementById("userDropdown");
-            const loginContainer = document.getElementById("loginContainer");
-            if (!loginContainer.contains(event.target)) {
-                dropdown.style.display = 'none';
+                const userRef = firebase.database().ref('usuarios/' + user.uid);
+                userRef.once('value').then((snapshot) => {
+                    const userData = snapshot.val();
+                    const userName = userData.nome || user.email;
+                    const userAvatar = userData.avatar ? imagens/${userData.avatar} : 'imagens/bonecologin1.png';
+                    const userRole = userData.role || 'aluno';
+
+                    loginLink.innerHTML = 
+                        <img src="${userAvatar}" alt="User Icon" class="user-icon">
+                        <p class="user-name">${userName}</p>
+                    ;
+
+                    let dashboardLink = '';
+                    if (userRole === 'proprietario') {
+                        dashboardLink = <a href="painel_proprietario.html">OWNER DASHBOARD</a>;
+                    } else if (userRole === 'professor') {
+                        dashboardLink = <a href="painel_professor.html">TEACHER DASHBOARD</a>;
+                    } else if (userRole === 'aluno') {
+                        dashboardLink = <a href="painel_aluno.html">STUDENT DASHBOARD</a>;
+                    }
+
+                    dropdown.innerHTML = 
+                        <a href="#" id="logout">LEAVE</a>
+                        ${dashboardLink}
+                    ;
+
+                    // Verificar progresso e liberar níveis
+                    if (userRole === 'aluno') {
+                        if (userData.atrelado_professor) {
+                            const professorRef = firebase.database().ref('usuarios/' + userData.atrelado_professor);
+                            console.log("ID do professor encontrado:", userData.atrelado_professor);
+
+                            professorRef.once('value').then((profSnapshot) => {
+                                const professorData = profSnapshot.val();
+                                console.log("Dados do professor:", professorData);
+
+                                const turmaId = '-O8mdLgStvNqNf6x-O5l'; // Substitua pelo ID da turma real
+                                const alunoId = user.uid;
+
+                                const nivelLiberado = professorData.turmas &&
+                                    professorData.turmas[turmaId] &&
+                                    professorData.turmas[turmaId].students &&
+                                    professorData.turmas[turmaId].students[alunoId] &&
+                                    professorData.turmas[turmaId].students[alunoId].nivel_em_curso
+                                    ? professorData.turmas[turmaId].students[alunoId].nivel_em_curso
+                                    : null;
+
+                                if (nivelLiberado) {
+                                    console.log("Nível definido pelo professor:", nivelLiberado);
+                                    liberarNiveis([nivelLiberado]);
+                                } else {
+                                    console.error("Nenhum nível foi definido pelo professor.");
+                                }
+                            }).catch((error) => {
+                                console.error("Erro ao buscar dados do professor:", error);
+                            });
+                        } else {
+                            if (!userData.progresso || Object.keys(userData.progresso).length === 0) {
+                                liberarNiveis(['Level1']);
+                            } else {
+                                const niveisLiberados = Object.keys(userData.progresso).map(nivel => nivel);
+                                liberarNiveis(niveisLiberados);
+                            }
+                        }
+                    }
+                }).catch((error) => {
+                    console.error("Erro ao buscar dados do usuário:", error);
+                });
+
+                loginLink.removeAttribute("href");
+                loginLink.onclick = function(event) {
+                    event.preventDefault();
+                    dropdown.style.display = dropdown.style.display === 'none' || dropdown.style.display === '' ? 'block' : 'none';
+                };
+            } else {
+                console.log("Nenhum usuário logado");
+                loginLink.innerHTML = "Login";
+                loginLink.href = "Formulario/login.html";
+                bloquearTodosNiveis();
+                invitationContainer.style.display = "flex"; // Exibe a imagem convite quando não logado
             }
         });
 
-        // Função para deslogar
-        document.addEventListener("click", function(event) {
+        // Função de logout
+        document.getElementById("userDropdown").addEventListener("click", function(event) {
             if (event.target.id === "logout") {
                 firebase.auth().signOut().then(() => {
                     console.log("Usuário deslogado");
-                    location.reload(); // Recarrega a página após deslogar
+                    location.reload();
                 }).catch((error) => {
                     console.error("Erro ao deslogar:", error);
                 });
             }
         });
-    </script>
 
-    <!-- Registro do service worker para PWA -->
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then(registration => {
-                    console.log('Service Worker registrado com sucesso:', registration.scope);
-                })
-                .catch(error => {
-                    console.log('Falha ao registrar o Service Worker:', error);
-                });
-        }
+        // Fecha o dropdown ao clicar fora dele
+        window.addEventListener("click", function(event) {
+            const dropdown = document.getElementById("userDropdown");
+            const loginLink = document.getElementById("loginLink");
+            if (event.target !== loginLink && !loginLink.contains(event.target)) {
+                dropdown.style.display = 'none';
+            }
+        });
 
-        // Prompt de instalação do PWA
+        // Adiciona o prompt de instalação do PWA
         let deferredPrompt;
         const installButton = document.getElementById('install-button');
 
@@ -287,6 +372,24 @@
             }
             installButton.style.display = 'none';
         });
+
+        // Adiciona funcionalidade para o botão convite
+        document.getElementById("invitationButton").addEventListener("click", function() {
+            window.location.href = "convite.html";
+        });
+    </script>
+
+    <!-- Registro do service worker -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+              .then(registration => {
+                console.log('Service Worker registrado com sucesso:', registration.scope);
+              })
+              .catch(error => {
+                console.log('Falha ao registrar o Service Worker:', error);
+              });
+        }
     </script>
 </body>
 </html>
