--- a/Level1/Unit1/listening - Copy.html
+++ b/Level1/Unit1/listening - Copy.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
     <link rel="stylesheet" href="style.css">
-
     <!-- Firebase Configuration and Initialization -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -24,12 +23,8 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
     </script>
-
-    <!-- Estilos CSS -->
     <style>
-        .login-link {
-            cursor: pointer;
-        }
+        .login-link { cursor: pointer; }
         .user-dropdown {
             display: none;
             flex-direction: column;
@@ -73,14 +68,6 @@
             font-size: 14px;
             color: #333;
         }
-        .current-level-unit {
-            margin-top: 10px;
-            font-family: Arial, sans-serif;
-            font-size: 12px;
-            font-weight: bold;
-            color: #000;
-            text-align: left;
-        }
         .unlock-gif {
             position: absolute;
             top: 0;
@@ -92,35 +79,28 @@
         }
     </style>
 </head>
-
 <body>
     <!-- Caixa de Login -->
     <div id="loginContainer" class="login-container">
         <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
-
         <!-- Dropdown de Usuário -->
         <div id="userDropdown" class="user-dropdown">
-            <!-- Links para o dashboard e itens do dropdown serão inseridos dinamicamente -->
+            <!-- Links para o dashboard e logout serão inseridos dinamicamente -->
         </div>
     </div>
-
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
 
-    <!-- Título -->
-    <div class="title-container">
-        <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
-        <!-- Nível e Unidade Atuais -->
-        <div id="currentLevelUnit" class="current-level-unit"></div>
-    </div>
-
-    <!-- Mapa -->
     <div class="map-container" id="mapContainer">
+        <!-- Imagem de título centralizada sobre o fundo -->
+        <div class="title-container">
+            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+        </div>
+
         <!-- SVG para as linhas -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <!-- Script Principal -->
     <script src="script.js"></script>
 </body>
 </html>
