--- a/Level1/index.html
+++ b/Level1/index.html
@@ -70,6 +70,7 @@
     <div class="map-container">
         <header style="text-align: center;">
             <h1>Select a Unit</h1>
+            <div id="level-display" style="font-family: Times, serif; font-weight: bold; color: black; margin-top: 10px;"></div>
            </header>
        <div style="text-align: center;">
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
@@ -197,6 +198,19 @@
                     console.error('Erro: Usuário não autenticado.');
                 }
             });
+        });
+    </script>
+ <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const levelDisplay = document.getElementById('level-display');
+            
+            // Obter a parte do Level na URL
+            const url = window.location.href;
+            const levelMatch = url.match(/Level\d+/);
+
+            if (levelMatch) {
+                levelDisplay.textContent = levelMatch[0]; // Exibe o Level encontrado
+            }
         });
     </script>
 </body>
