--- a/Level1/index.html
+++ b/Level1/index.html
@@ -16,7 +16,7 @@
             overflow-y: auto;
         }
 
-       #level-display {
+       .level-display {
            display: block; /* Garante que o texto esteja em uma nova linha */
            margin-top: 10px; /* Adiciona um espaço entre o título e o nível */
            font-family: Times, serif;
@@ -81,7 +81,7 @@
     <div class="map-container">
         <header style="text-align: center;">
             <h1>Select a Unit</h1>
-            <div id="level-display" style="margin-top: 10px;"></div>
+            <div id="level-display" class="level-display"></div>
            </header>
        <div style="text-align: center;">
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
