--- a/Level1/index.html
+++ b/Level1/index.html
@@ -17,8 +17,17 @@
         }
 
         .header-container {
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             margin-top: 20px;
+            text-align: center;
+        }
+
+        .header-container h1 {
+            margin: 0;
+            font-size: 36px;
+            color: green;
         }
 
         .level-display {
@@ -86,11 +95,11 @@
             <h1>Select a Unit</h1>
             <div id="level-display" class="level-display"></div>
         </header>
-        
+
         <div style="text-align: center;">
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
         </div>
-        
+
         <main>
             <div class="units">
                 <a href="Unit1/index.html" id="unit1" class="unit-button">Unit 1</a>
