--- a/Level1/index.html
+++ b/Level1/index.html
@@ -17,7 +17,9 @@
         }
 
         .header-container {
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             margin-top: 20px;
         }
 
@@ -55,7 +57,6 @@
             max-width: 800px;
             margin: 0 auto;
             justify-content: center;
-            justify-items: center;
         }
 
         .unit-button {
