--- a/Level1/index.html
+++ b/Level1/index.html
@@ -26,7 +26,7 @@
         .header-container h1 {
             margin: 0;
             font-size: 36px;
-            color: green;
+            color: #4CAF50;
         }
 
         .level-display {
