--- a/Level1/Unit1/HannahVideo/index.html
+++ b/Level1/Unit1/HannahVideo/index.html
@@ -51,16 +51,18 @@
         .video-container {
             position: relative;
             max-width: 80%; /* Limita a largura da área de vídeo a 80% da tela */
-            max-height: 60%; /* Limita a altura da área de vídeo */
             width: 100%;
-        }
-
-        video {
-            width: 100%; /* Garante que o vídeo respeite as proporções da área disponível */
-            height: auto; /* Mantém a proporção original do vídeo */
+            aspect-ratio: 16 / 9; /* Define uma proporção fixa para o vídeo */
             border: 3px solid white;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            overflow: hidden; /* Garante que nada fora da proporção seja exibido */
+        }
+
+        video {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
         }
 
         .video-cover {
