--- a/Level1/Unit1/HannahVideo/index.html
+++ b/Level1/Unit1/HannahVideo/index.html
@@ -52,7 +52,7 @@
             position: relative;
             width: 80%; /* Limita a largura da área de vídeo a 80% da tela */
             max-width: 800px; /* Define um limite máximo de largura */
-            margin-bottom: 50px; /* Margem inferior maior */
+            margin-bottom: 50px; /* Aumenta a margem inferior */
             border: 3px solid white;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -73,7 +73,7 @@
             width: 100%;
             height: 100%;
             background: url('../../../../imagens/botoes/video_button.png') no-repeat center center;
-            background-size: cover; /* Ajusta para cobrir todo o contêiner */
+            background-size: contain; /* Ajuste para mostrar toda a imagem sem cortá-la */
             cursor: pointer;
             z-index: 2;
         }
