--- a/Level1/Unit1/HannahVideo/index.html
+++ b/Level1/Unit1/HannahVideo/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             background: url('../../../../imagens/fundo.png') no-repeat center center fixed;
             background-size: cover;
-            color: white; /* Para o texto ser visível em fundos claros */
+            color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -43,16 +43,16 @@
         h1 {
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-            margin-top: 80px; /* Margem para evitar sobreposição com o botão */
+            margin-top: 80px;
             margin-bottom: 20px;
             font-size: 2em;
         }
 
         .video-container {
             position: relative;
-            width: 80%; /* Limita a largura da área de vídeo a 80% da tela */
-            max-width: 800px; /* Define um limite máximo de largura */
-            margin-bottom: 50px; /* Aumenta a margem inferior */
+            width: 80%;
+            max-width: 800px;
+            margin-bottom: 50px;
             border: 3px solid white;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -73,13 +73,13 @@
             width: 100%;
             height: 100%;
             background: url('../../../../imagens/botoes/video_button.png') no-repeat center center;
-            background-size: contain; /* Ajuste para mostrar toda a imagem sem cortá-la */
+            background-size: contain;
             cursor: pointer;
             z-index: 2;
         }
 
         .video-cover.hidden {
-            display: none; /* Esconde a capa ao clicar */
+            display: none;
         }
 
         #completion-modal {
@@ -94,6 +94,7 @@
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             z-index: 1000;
             text-align: center;
+            color: black;
         }
 
         #completion-modal button {
@@ -168,12 +169,14 @@
             // Reproduz o vídeo e esconde a capa
             video.play();
             cover.classList.add('hidden');
+
+            // Atualiza o progresso no Firebase após clicar no play
+            ensureUserIsAuthenticated(updateNextPhase);
         }
 
         document.getElementById('video').addEventListener('ended', () => {
-            // Ao finalizar o vídeo, exibe o modal e atualiza o progresso no Firebase
+            // Ao finalizar o vídeo, exibe o modal
             showModal();
-            ensureUserIsAuthenticated(updateNextPhase);
         });
 
         function showModal() {
