--- a/Level1/Unit1/HannahVideo/index.html
+++ b/Level1/Unit1/HannahVideo/index.html
@@ -41,11 +41,14 @@
         }
 
         h1 {
-            color: white;
+            font-size: 2em;
+            margin: 0;
+            text-align: center;
+            color: #333;
+            flex-grow: 1;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             margin-top: 80px;
             margin-bottom: 20px;
-            font-size: 2em;
         }
 
         .video-container {
