--- a/Level1/Unit1/HannahVideo/index.html
+++ b/Level1/Unit1/HannahVideo/index.html
@@ -44,7 +44,7 @@
             font-size: 2em;
             margin: 0;
             text-align: center;
-            color: #13ad25;
+            color: #13ad23;
             flex-grow: 1;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             margin-top: 80px;
@@ -91,6 +91,7 @@
             margin-bottom: 10px;
             text-align: center;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            color: black;
         }
 
         #lyrics-container {
@@ -101,7 +102,7 @@
             text-align: center;
             font-size: 1.2em;
             line-height: 1.5;
-            color: white;
+            color: black;
             background: transparent;
         }
 
