--- a/Level1/Unit1/HannahVideo/index.html
+++ b/Level1/Unit1/HannahVideo/index.html
@@ -44,7 +44,7 @@
             font-size: 2em;
             margin: 0;
             text-align: center;
-            color: #13ad23;
+            color: #228B22; /* Verde que combina com o estilo da página */
             flex-grow: 1;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             margin-top: 80px;
@@ -85,7 +85,7 @@
             display: none;
         }
 
-        #lyrics-title {
+        #content-title {
             font-size: 1.8em;
             margin-top: 30px;
             margin-bottom: 10px;
@@ -100,7 +100,8 @@
             margin-bottom: 50px;
             padding: 20px;
             text-align: center;
-            font-size: 1.2em;
+            font-size: 1.4em; /* Aumentado o tamanho do texto */
+            font-weight: bold; /* Texto em negrito */
             line-height: 1.5;
             color: black;
             background: transparent;
@@ -157,7 +158,7 @@
         <div class="video-cover" id="videoCover" onclick="playVideo()"></div>
     </div>
 
-    <h2 id="lyrics-title">Lyrics</h2>
+    <h2 id="content-title">Story & Lyrics</h2>
     <pre id="lyrics-container"></pre>
 
     <div id="overlay"></div>
@@ -260,7 +261,7 @@
             return { level, unit };
         }
 
-        // Carrega a letra da música do arquivo letra.txt
+        // Carrega a letra da música ou história do arquivo letra.txt
         async function loadLyrics() {
             try {
                 const response = await fetch('letra.txt');
@@ -268,7 +269,7 @@
                 document.getElementById('lyrics-container').textContent = lyrics;
             } catch (error) {
                 console.error("Erro ao carregar o arquivo letra.txt", error);
-                document.getElementById('lyrics-container').textContent = "Lyrics could not be loaded.";
+                document.getElementById('lyrics-container').textContent = "Content could not be loaded.";
             }
         }
 
