--- a/Level1/Unit1/HannahVideo/index.html
+++ b/Level1/Unit1/HannahVideo/index.html
@@ -95,9 +95,9 @@
         }
 
         #lyrics-container {
-            width: 80%;
+            width: calc(100% - 40px); /* Limita a largura com 20px de margem em cada lado */
             max-width: 800px;
-            margin-bottom: 50px;
+            margin: 0 auto 50px auto; /* Centraliza e define uma margem inferior */
             padding: 20px;
             text-align: center;
             font-size: 1.4em; /* Aumentado o tamanho do texto */
@@ -105,6 +105,8 @@
             line-height: 1.5;
             color: black;
             background: transparent;
+            white-space: pre-wrap; /* Quebra as linhas conforme necessário */
+            word-wrap: break-word; /* Quebra palavras longas, se necessário */
         }
 
         #completion-modal {
