--- a/Level1/Unit1/HannahVideo/index.html
+++ b/Level1/Unit1/HannahVideo/index.html
@@ -75,7 +75,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('../../../../imagens/botoes/video_button.png') no-repeat center center;
+            background: url('capa.jpg') no-repeat center center;
             background-size: contain;
             cursor: pointer;
             z-index: 2;
