--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -34,7 +34,9 @@
             cursor: pointer;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
             position: absolute;
-            top: -30px;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
         }
 
         #dialogue-container {
